# gitpg

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-checks.yml
template_for_python/: .env.template
template_for_python/src/: features.py  helpers.py
