[tool.poetry]
name = "template_for_python"
version = "0.2.4"
description = ""
authors = ["Martin Domaracky"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
poetry-plugin-export = "^1.8.0"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.1.8"
pytest = "^7.4.3"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "template_for_python/tests",
]

[tool.black]
line-length = 120

[tool.mypy]
strict = true
